Bug 270440 - UltimateGuitar reporting an unauthorized application, not loading tab
Summary: UltimateGuitar reporting an unauthorized application, not loading tab
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Tabs (other bugs)
Version First Reported In: 2.4.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-04-08 14:53 UTC by Chaim Kirby
Modified: 2011-06-05 19:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chaim Kirby 2011-04-08 14:53:52 UTC
Version:           2.4.0 (using KDE 4.5.1) 
OS:                Linux

Warning reported by UltimateGuitar in the tabs widget:

WARNING: You are trying to view
content from Ultimate-Guitar.com
in an unauthorized application,
which is prohibited.

Please use an official Ultimate
Guitar Tabs application for iPhone,
iPad or Android to access legitimate
chords, guitar, bass, and drum tabs
from Ultimate-Guitar.com database.

Type "ultimate guitar tabs" in Apple
App Store's or Android Market's
search to find the application.

Reproducible: Sometimes

Steps to Reproduce:
Try to load Tabs for pretty much any song

Actual Results:  
Get the warning in place of the tabs

Expected Results:  
Guitar Tablature

OS: Linux (x86_64) release 2.6.35-28-generic
Compiler: cc
Comment 1 Myriam Schweingruber 2011-04-10 11:21:43 UTC
Rainer, could you please have a look at this ASAP?
Comment 2 Sam Lade 2011-04-12 23:29:21 UTC
The actual tab should be present below the warning message.
All they've done is put the warning message before the tabs themselves, with the warning message hidden with CSS so it's invisible in a web browser. There's absolutely nothing intelligent about what they've done.
'Fixing' should simply be a case of ignoring the first <pre></pre> tag located on the page and displaying the second.
Comment 3 Rainer Sigle 2011-04-13 19:23:24 UTC
Sorry, I'havent seen that report earlier. It really seems that that we're violating the terms of use from ultimateguitar.com. I was absolutely not aware of that, when I've implemented the applet.

So, if that's really the case the highest priority is to respect law and protect Amarok. Although it would be easy, I'll definitly not remove the warning message by purpose. Unless we find an agreement with the site, which I doubt they will agree (and I've also no contact with them), I think we should disable the applet. What do you think?

Myriam: Should this be discussed on the devel mailing list?
Comment 4 Sam Lade 2011-04-13 19:44:44 UTC
My thoughts:
http://www.ultimate-guitar.com/about/tos.htm (relevant part seems to be section 16)
I don't see that we're violating the terms there. Furthermore, the warning displayed on the tabs refers specifically to iPhone/Android applications, which we are not.
Section 16 provides an email address to contact if you want to use their content for commercial purposes. I suppose if others are more concerned about the terms here than I am, someone could contact that address.
Comment 5 Rainer Sigle 2011-04-13 20:55:25 UTC
I've sent an e-mail to Ultimate-Guitar asking for using their service in a non-commercial application. Now looking forward to hearing from them and reporting here afterwards...
Comment 6 Myriam Schweingruber 2011-04-14 12:04:08 UTC
Rainer: yes, please take this to the amarok-devel@ mailing list, as it is important everybody knows about.
Comment 7 Myriam Schweingruber 2011-06-04 12:16:49 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 8 Chaim Kirby 2011-06-04 18:33:50 UTC
The bug has been partially fixed. The warning still shows up, but after the warning the tab shows as expected.
Comment 9 Rainer Sigle 2011-06-04 18:52:29 UTC
Yes, the warning message is stell present.

I tried to contact Ultimate Guitar two times already, but no reaction each time. At least they created a case, but it was closed a few days later with not a single response.

I've a one-liner fix in place. Should I commit it?
Comment 10 Kevin Funk 2011-06-04 18:58:46 UTC
If it's not an really ugly hack, do it ;)

Else, just join #amarok and discuss.
Comment 11 Kevin Funk 2011-06-05 17:54:09 UTC
Fixed.

commit 1c644792737f308b9e12ffce7fa70f7ab477729e
Author: Rainer Sigle <rainer.sigle@web.de>
Date:   Sun Jun 5 17:16:07 2011 +0200

    Remove warning message from UltimateGuitar.
    
    BUG:270440
    FIXED-IN: 2.4.2