Remove warning message from UltimateGuitar.

BUG:270440
FIXED-IN: 2.4.2